# galinette-debian

./: AUTHORS  CMakeLists.txt  COPYING  INSTALL  changelog
debian/: changelog  control  copyright  galinette-flash.1  galinette-nox.install  galinette-nox.manpages  galinette.1  galinette.desktop  galinette.install  galinette.manpages  galinette.menu  galinette.xpm  libgalinette-dev.install  libgalinette.install  libgalinette.postinst  libgalinette.postrm  libgalinette0.install  rules  watch
debian/patches/: 001-linking-fix.patch  001-soname.patch  002-en.patch  series
galinette-cli/: CMakeLists.txt  galinette-flash.c
galinette-gtk/: CMakeLists.txt  callbacks.c  callbacks.h  galinette-gtk.c  galinette-gtk.h  galinette_gtk.glade  hal.c  hal.h  main.c
libgalinette/: CMakeLists.txt  device.c  error.c  firmware.c  flash.c  libgalinette-private.h  libgalinette.h
